--- a/laba6/laba6.cbp
+++ b/laba6/laba6.cbp
@@ -2,28 +2,28 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="laba6" />
+		<Option title="lb6" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/laba6" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/lb6" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="../laba6" />
+					<Add directory="../lb6" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/laba6" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/lb6" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="../laba6" />
+					<Add directory="../lb6" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -34,9 +34,11 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="laba6.cpp" />
-		<Unit filename="laba6.h" />
+		<Unit filename="Exeption.h" />
+		<Unit filename="IteratorImpl.h" />
+		<Unit filename="SmartPointer.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="tree.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
